# Thrace

./: CMakeLists.txt  README.md  main.cpp
AST/: ExprAST.h  ExprsAST.cpp  ExprsAST.h  NumberExprsAST.cpp  NumberExprsAST.h
CodeGen/: ThraceGen.cpp  ThraceGen.h
Diagnostics/: BasicDiagnostics.cpp  BasicDiagnostics.h
Lexers/: BaseLexer.cpp  BaseLexer.h
Parsing/: BasicParser.cpp  BasicParser.h
